- `envvars` isn't parsed properly (see #281)
- `container` top level and rule sections parsing
- Resolve/completion for paths in notebook section (see #289)

Fixed:
- Rule not yet defined false positive for lambdas (see #286)
- Unresolved reference for 'rule' in 'run' section (see #283)
- Doesn't automatically create folding code element for "checkpoint" (see #273)

Version 0.6.0 build #0.6.0.165
-------------
Released on April 12th 2019

Fixed:
- 2020.1 Compatibility (see #279)
- “cache:” rule section support (see #280)

Version 0.5.2 build #0.5.2.126
-------------
Released on November 26th 2019

Fixed:
- UnsupportedOperationException (see #271)

Version 0.5.2 build #0.5.2.124
-------------
Released on November 26th 2019

Minor update compatible with 2019.3 builds

Fixed:
- 2019.2 Deprecated API cleanup (see #219)
- PluginException: While loading class SnakemakeVisitorFilter (see #270)
- PsiInvalidElementAccessException: PyUnboundLocalVariableInspection (see #268)


Version 0.5.1 build #0.5.1.126
-------------
Released on November 26th 2019

Minor update which corrects untilBuild, this plugin version isn't compatible with 2019.3 EAP / RC.

Fixed:
- SnakeCharm is not compatible with AppCode (see #269)


Version 0.5 build #0.5.112.2018.3  (removed from plugins repo)
-------------
Released on November 20th 2019
- sinceBuild "183.4284" (2018.3)
- untilBuild "193.*" (2019.3)

This is a major update which includes two major features:
* Wildcards support with syntax highlighting, code completion, resolve, find usages,
    rename and various useful inspections
* Internal code parser and lexer updated to support multiline strings and removes wrong
    errors highlighting in many places

To get all features enabled please configure in your project Python interpreter with snakemake
module installed. Otherwise some smart code insight features will not work.

Special thanks to our contributors Sharkova Darya and Nazarov Nikita. Without them this major plugin