@@ -1,0 +1,4 @@
+if True:
+    rule:
+        shell: "2"
+               "3"
