@@ -1,0 +1,5 @@
+if True:
+    pass
+    rule:
+        shell: "2"
+               "3"
