@@ -19,6 +19,7 @@ Fixed:
 - Rule not yet defined false positive for lambdas (see #286)
 - Unresolved reference for 'rule' in 'run' section (see #283)
 - Doesn't automatically create folding code element for "checkpoint" (see #273)
+- Multiline shell commands in anonymous rules defined in loops (see #275)
 
 Version 0.6.0 build #0.6.0.165
 -------------
